--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Home - ReckSneaks</title>
-	<link rel = "icon" href = "/Users/sunnypatel/Desktop/ReckSneaks/logo.png" type = "image/x-icon">
+	<link rel = "icon" href = "./images/logo.png" type = "image/x-icon">
 </head>
 
 <body class = "index1">
@@ -38,7 +38,7 @@
     
     <div class = "scrollToSeeMore">
         <h3 class = "scrollDownText">Scroll Down</h3>
-        <img class = "scrollDownImage" src="/Users/sunnypatel/Desktop/ReckSneaks/scrollDown.png" alt="scroll">
+        <img class = "scrollDownImage" src="./images/scrollDown.png" alt="scroll">
     </div>
 
     <div class = "containe reveal">
@@ -49,7 +49,7 @@
                 <p>The Jordan 11 Retro Cool Grey is a classic sneaker designed by Nike and named after legendary basketball player Michael Jordan. The Cool Grey colorway features a sleek grey upper made of a combination of leather and mesh, with pops of white on the midsole and Jumpman logo. The shoe also has a patent leather mudguard and translucent outsole, which give it a stylish and modern look. The Jordan 11 Retro Cool Grey is known for its comfortable fit and iconic design, making it a popular choice among sneaker enthusiasts and collectors.</p>
             </div>
             <div class = "right5">
-                <img class = "shoe5" src = "/Users/sunnypatel/Desktop/ReckSneaks/image6.webp" alt = "Jordan 11 Retro Cool Grey">
+                <img class = "shoe5" src = "./images/image6.webp" alt = "Jordan 11 Retro Cool Grey">
             </div>
         </div>
     </div>
@@ -62,7 +62,7 @@
                 <p>The New Balance 990v5 is a classic running shoe that is known for its comfort and support. It features a durable suede and mesh upper, a cushioned midsole, and a rubber outsole for traction. The grey legacy colorway is a sleek and stylish option that can be worn for both casual and athletic occasions. The 990v5 also has a supportive fit and is suitable for those with flat feet or overpronation. It is a versatile shoe that can be worn for a variety of activities, from running and jogging to walking and everyday wear.</p>
             </div>
             <div class = "right4">
-                <img class = "shoe4" src = "/Users/sunnypatel/Desktop/ReckSneaks/image5.webp" alt = "New Balance 990v5 Grey">
+                <img class = "shoe4" src = "./images/image5.webp" alt = "New Balance 990v5 Grey">
             </div>
         </div>
     </div>
@@ -75,7 +75,7 @@
                 <p>The Jordan 1 Mocha Retro High Travis Scott Legacy is a limited edition version of the classic Air Jordan 1 sneakers that were released in collaboration with rapper Travis Scott. The sneakers feature a mocha brown colorway with a premium leather upper, perforated toe, and contrast stitching. They also have a padded collar and tongue, as well as a cushioned insole for comfort. The outsole is made of durable rubber, and the sneakers are finished with Travis Scott's signature "Cactus Jack" branding on the heel. These sneakers were released in limited quantities and are highly sought after by sneaker collectors and fans of Travis Scott.</p>
             </div>
             <div class = "right3">
-                <img class = "shoe3" src = "/Users/sunnypatel/Desktop/ReckSneaks/image4.webp" alt = "Jordan 1 Mocha Retro High Travis Scott">
+                <img class = "shoe3" src = "./images/image4.webp" alt = "Jordan 1 Mocha Retro High Travis Scott">
             </div>
         </div>
     </div>
@@ -88,7 +88,7 @@
                 <p>The Jordan 1 Retro High Off-White Chicago is a collaborative sneaker design between Nike and Off-White, a fashion label founded by designer Virgil Abloh. This particular sneaker is a reinterpretation of the original Air Jordan 1 High "Chicago" colorway, which was released in 1985 and was designed to pay tribute to the city of Chicago, where Michael Jordan grew up and played college basketball.</p>
             </div>
             <div class = right2>
-                <img class = "off-whitechicago" src = "/Users/sunnypatel/Desktop/ReckSneaks/image3.webp" alt = "Jordan 1 Retro High Off-White Chicago">
+                <img class = "off-whitechicago" src = "./images/image3.webp" alt = "Jordan 1 Retro High Off-White Chicago">
             </div>
         </div>
     </div>
@@ -101,7 +101,7 @@
                 <p>The Air Jordan 1 OG Chicago was the first sneaker in the Air Jordan line, and it was designed specifically for Jordan to wear during his rookie season with the Chicago Bulls. The sneaker quickly became popular among basketball players and fans alike, and it helped to establish the Air Jordan brand as a leader in the sneaker industry.</p>            
             </div>
             <div class = "right1">
-                <img class = "chicagoOG1985" src = "/Users/sunnypatel/Desktop/ReckSneaks/AJ 1 OG Chicago.jpeg" alt="Jordan 1 OG Chicago(1985)">
+                <img class = "chicagoOG1985" src = "./images/AJ 1 OG Chicago.jpeg" alt="Jordan 1 OG Chicago(1985)">
             </div>
         </div>
     </div>
