--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>About - ReckSneaks</title>
-	<link rel = "icon" href = "/Users/sunnypatel/Desktop/ReckSneaks/logo.png" type = "image/x-icon">
+	<link rel = "icon" href = "./images/logo.png" type = "image/x-icon">
 </head>
 <body>
 	<nav>
@@ -35,7 +35,7 @@
 	<div class = "body1">
 		<h2 class = "aboutShoe">What are hypebeast sneakers?</h2>
 
-		<img class = "manyShoes" src = "/Users/sunnypatel/Desktop/ReckSneaks/hypebeast.jpg" alt = "hypebeast"/>
+		<img class = "manyShoes" src = "./images/hypebeast.jpg" alt = "hypebeast"/>
 
 		<p class = "hype">Hypebeast sneakers refer to popular, trendy sneakers that are highly sought after by collectors and fashion enthusiasts. The term "hypebeast" originated in the 
 		mid-2000s as a slang term used to describe people who obsessively follow and collect the latest fashion trends, particularly in the streetwear and sneaker cultures. 
