--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Contact Us - ReckSneaks</title>
-	<link rel = "icon" href = "/Users/sunnypatel/Desktop/ReckSneaks/logo.png" type = "image/x-icon">
+	<link rel = "icon" href = "./images/logo.png" type = "image/x-icon">
 </head>
 <body>
 	<nav>
@@ -35,7 +35,7 @@
     <div class = "contactInput">
 
         <div class = "contactPageImage">
-            <img src="/Users/sunnypatel/Desktop/ReckSneaks/contactPageImage.jpeg" alt = "Hypebeast Sneakers">
+            <img src="./images/contactPageImage.jpeg" alt = "Hypebeast Sneakers">
         </div>
 
         <div class = "container">
